; ModuleID = '/home/carl/AnghaBench/freebsd/cddl/contrib/opensolaris/tools/ctf/cvt/extr_fixup_tdescs.c_lookup_tdesc.c'
source_filename = "/home/carl/AnghaBench/freebsd/cddl/contrib/opensolaris/tools/ctf/cvt/extr_fixup_tdescs.c_lookup_tdesc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.match = type { i8*, i32*, i32* }

@matching_iidesc = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i8*)* @lookup_tdesc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @lookup_tdesc(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.match, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = getelementptr inbounds %struct.match, %struct.match* %5, i32 0, i32 0
  store i8* null, i8** %6, align 8
  %7 = getelementptr inbounds %struct.match, %struct.match* %5, i32 0, i32 1
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to i32*
  store i32* %9, i32** %7, align 8
  %10 = getelementptr inbounds %struct.match, %struct.match* %5, i32 0, i32 2
  store i32* null, i32** %10, align 8
  %11 = load i32*, i32** %3, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = load i32, i32* @matching_iidesc, align 4
  %14 = call i32 @iter_iidescs_by_name(i32* %11, i8* %12, i32 %13, %struct.match* %5)
  %15 = getelementptr inbounds %struct.match, %struct.match* %5, i32 0, i32 1
  %16 = load i32*, i32** %15, align 8
  ret i32* %16
}

declare dso_local i32 @iter_iidescs_by_name(i32*, i8*, i32, %struct.match*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
